--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
+    "@prisma/client": "^5.12.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "bootstrap": "^5.3.3",
+    "next": "14.2.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "next": "14.2.0"
+    "react-redux": "^9.1.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.0"
+    "eslint-config-next": "14.2.0",
+    "prisma": "^5.12.1",
+    "typescript": "^5"
   }
 }
